Got the entire control working, centered vertically and horizontally, and all data loading from the external service. Also implemented some properties that allow for the city and state to be changed easily.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/brandontrabon/Weather-Widget#readme",
   "dependencies": {
+    "gulp": "^3.9.1",
+    "gulp-shell": "^0.5.2",
     "requirejs": "^2.2.0"
   }
 }
